--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoViaticosComisiones/_modal_crear_editar_consecutivo.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoViaticosComisiones/_modal_crear_editar_consecutivo.html
@@ -1,11 +1,11 @@
 {% load eva_tags %}
 {% load static %}
-<form id="requerimientos_form" method="post" class="needs-validation" novalidate>
+<form id="viaticoscomisiones_form" method="post" class="needs-validation" novalidate>
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header p-b-0">
                 <h4 class="modal-title">
-                    {% if editar %}Editar consecutivo de requerimiento interno: {{ consecutivo.codigo }}{% else %}Crear consecutivo de requerimiento interno {% endif %}
+                    {% if editar %}Editar consecutivo de viaticos y comisiones: {{ consecutivo.codigo }}{% else %}Crear consecutivo de viaticos y comisiones {% endif %}
                 </h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true"><i class="fal fa-times"></i></span>
