EVA - 227 refactor: Se agrega la clase table-sm a las tablas de los otros consecutivos para mejorar la apariencia.

--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoContratos/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoContratos/index.html
@@ -40,7 +40,7 @@
                                 <div class="panel-group">
                                     <div class="panel-body">
                                         {% include 'EVA/_common/_busqueda_paginacion.html' %}
-                                        <table class="table table-bordered w-100 table-striped" id="dataTable">
+                                        <table class="table table-bordered w-100 table-striped table-sm" id="dataTable">
                                             <thead class="bg-primary-600">
                                                 <tr>
                                                     <th data-priority="1" class="min-w-100">Consecutivo</th>
