--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoOficios/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoOficios/index.html
@@ -43,7 +43,7 @@
                                     <div class="panel-body">
 
                                         {% include 'EVA/_common/_busqueda_paginacion.html' %}
-                                        <table class="table table-bordered w-100" id="dataTable">
+                                        <table class="table table-bordered w-100 table-sm" id="dataTable">
                                             <thead class="bg-primary-600">
                                                 <tr>
                                                     <th data-priority="1" >Código</th>
