--- a/GestionDocumental/templates/GestionDocumental/_common/menu_aplicacion.html
+++ b/GestionDocumental/templates/GestionDocumental/_common/menu_aplicacion.html
@@ -38,7 +38,7 @@
         </li>
         {% endif %}
         {% if perms.GestionDocumental.view_plandetrabajo %}
-            <li {% if menu_actual == 'consecutivo-plantrabajo' %} class="active" {% endif %}>
+            <li {% if menu_actual == 'consecutivos-plantrabajo' %} class="active" {% endif %}>
             <a href="{% url 'GestionDocumental:consecutivo-plantrabajo-index' 0 %}" title="Consecutivo de plan de trabajo" data-filter-tags="consecutivo plandetrabajo">
                 <i class="far fa-file-alt"></i>
                 <span class="nav-link-text" data-i18n="nav.gestion_documental_consecutivo_plantrabajo">Consecutivo de plan de trabajo</span>
@@ -46,10 +46,18 @@
         </li>
         {% endif %}
         {% if perms.GestionDocumental.view_viaticoscomisiones %}
-            <li {% if menu_actual == 'consecutivo-viaticoscomisiones' %} class="active" {% endif %}>
+            <li {% if menu_actual == 'consecutivos-viaticoscomisiones' %} class="active" {% endif %}>
             <a href="{% url 'GestionDocumental:consecutivo-viaticoscomisiones-index' 0 %}" title="Consecutivo de viaticos y comisiones" data-filter-tags="consecutivo viaticoscomisiones">
                 <i class="far fa-file-alt"></i>
                 <span class="nav-link-text" data-i18n="nav.gestion_documental_consecutivo_viaticoscomisiones">Consecutivo de viaticos y comisiones</span>
+            </a>
+        </li>
+        {% endif %}
+        {% if perms.GestionDocumental.view_ordenestrabajo %}
+            <li {% if menu_actual == 'consecutivos-ordenestrabajo' %} class="active" {% endif %}>
+            <a href="{% url 'GestionDocumental:consecutivo-ordenestrabajo-index' 0 %}" title="Consecutivo de ordenes de trabajo" data-filter-tags="consecutivo ordenestrabajo">
+                <i class="far fa-file-alt"></i>
+                <span class="nav-link-text" data-i18n="nav.gestion_documental_consecutivo_ordenestrabajo">Consecutivo de ordenes de trabajo</span>
             </a>
         </li>
         {% endif %}
