--- a/GestionDocumental/templates/GestionDocumental/ConsecutivosReuniones/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivosReuniones/index.html
@@ -22,17 +22,16 @@
                 <div class="col-xl-12">
                     <div id="panel-1" class="panel">
                         <div class="panel-hdr">
-                            {% if perms.GestionDocumental.add_consecutivoreunion %}
-                            <div class="col-md-10">
-                                <small>
-                                    <a class="fad fa-3x fad fa-plus-circle" href="javascript:abrirModalCrearReunion('{% url 'GestionDocumental:consecutivo-reuniones-crear'%}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Agregar consecutivo acta de reunion"></a>
-                                </small>
-                            </div>
-                            {% else %}
-                            <div class="col-md-10"></div>
-                            {% endif %}
-                            <div class="col-md-2" style="float: right" >
-                                {% select_tag opciones_filtro 'filtro_consecutivos' '' value=id_filtro  %}
+                            <h2 class="small">
+                                {% if perms.GestionDocumental.add_consecutivoreunion %}
+                                    <span class="fad fa-2x fa-plus-circle cursor-pointer" onclick="abrirModalCrearReunion('{% url 'GestionDocumental:consecutivo-reuniones-crear'%}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Agregar consecutivo de reuniones">
+                                    </span>
+                                {% endif %}
+                            </h2>
+                            <div class="panel-toolbar">
+                                 <div class="d-flex position-relative ml-auto mr-2" style="min-width: 10rem;">
+                                {% select_tag opciones_filtro 'filtro_consecutivos' '' value=id_filtro %}
+                                 </div>
                             </div>
                             <input id="ruta_filtro_consecutivos" hidden value="/gestion-documental/consecutivo-reuniones/">
                         </div>
