EVA - 227 refactor: Se corrige la ortografía de la palabra órdenes y viáticos.

--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoOrdenesTrabajo/_modal_crear_editar_consecutivo.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoOrdenesTrabajo/_modal_crear_editar_consecutivo.html
@@ -5,7 +5,7 @@
         <div class="modal-content">
             <div class="modal-header p-b-0">
                 <h4 class="modal-title">
-                    {% if editar %}Editar consecutivo de ordenes de trabajo: {{ consecutivo.codigo }}{% else %}Crear consecutivo de  ordenes de trabajo{% endif %}
+                    {% if editar %}Editar consecutivo de órdenes de trabajo: {{ consecutivo.codigo }}{% else %}Crear consecutivo de  órdenes de trabajo{% endif %}
                 </h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true"><i class="fal fa-times"></i></span>
