--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoViaticosComisiones/_modal_crear_editar_consecutivo.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoViaticosComisiones/_modal_crear_editar_consecutivo.html
@@ -5,7 +5,7 @@
         <div class="modal-content">
             <div class="modal-header p-b-0">
                 <h4 class="modal-title">
-                    {% if editar %}Editar consecutivo de viaticos y comisiones: {{ consecutivo.codigo }}{% else %}Crear consecutivo de viaticos y comisiones {% endif %}
+                    {% if editar %}Editar consecutivo de viáticos y comisiones: {{ consecutivo.codigo }}{% else %}Crear consecutivo de viáticos y comisiones {% endif %}
                 </h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true"><i class="fal fa-times"></i></span>
