EVA-218 feat: Se añade el botón de finalización de la reserva de la sala de juntas al modal de crear y editar reserva
También se agrega la condición para que el botón de eliminar solo se muestre cuando el tiempo de inicio de la reserva sea superior a la fecha actual, adicionalmente el botón de editar solo se muestra si la reserva esta activa y no finalizada.

--- a/Administracion/templates/Administracion/SalaJuntas/modal_crear_editar_reserva.html
+++ b/Administracion/templates/Administracion/SalaJuntas/modal_crear_editar_reserva.html
@@ -42,13 +42,18 @@
                 {% endif %}
                 <div class="modal-footer">
                     <button data-dismiss="modal" class="btn btn-warning btn-pills " href="javascript:void(0);"  onclick="fbtnCancelar()">Cancelar</button>
-                    <button id="agregar_{{ reserva.id }}" type="submit" class="btn btn-primary btn-pills"> {% if editar %}Editar{% else %}Agregar{% endif %} </button>
-                {% if editar %}
-                    <a type="button" class="btn btn-danger btn-pills" id="eliminar_{{ reserva.id }}" href="javascript:void(0);"  onclick="fEliminarReunion({{ reserva.id }}, true)" >Eliminar</a>
-                 {% endif %}
+                    {% if not cierre %}
+                        <button id="agregar_{{ reserva.id }}" type="submit" class="btn btn-primary btn-pills"> {% if editar %}Editar{% else %}Agregar{% endif %} </button>
+                    {% endif %}
+                    {% if editar %}
+                        {% if finalizar or cierre %}
+                            <a type="button" class="btn btn-danger btn-pills" id="finalizar_{{ reserva.id }}" href="javascript:void(0);"  onclick="fFinalizarReunion({{ reserva.id }})" >Finalizar</a>
+                        {% else %}
+                            <a type="button" class="btn btn-danger btn-pills" id="eliminar_{{ reserva.id }}" href="javascript:void(0);"  onclick="fEliminarReunion({{ reserva.id }}, true)" >Eliminar</a>
+                        {% endif %}
+                    {% endif %}
                 </div>
             </div>
         </div>
     </div>
 </form>
-
